# illustrator-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
src/: cli.rs  error.rs  handler.rs  icc.rs  lib.rs
src/export/: json.rs  metadata.rs  mod.rs  svg.rs
src/importer/: mod.rs  path.rs  svg.rs
src/model/: colors.rs  document.rs  geometry.rs  mod.rs  objects.rs
src/parser/: ai_parser.rs  container.rs  lexer.rs  mod.rs  operators.rs  parser.rs
src/writer/: container.rs  mod.rs  pgf.rs
